force-app/main/default/objects/Service_Orderr__c/Service_Orderr__c.object-meta.xml
<CustomObject>
    <label>Service Orderr</label>
    <nameField>
        <displayFormat>SO-{00000}</displayFormat>
        <label>Service Orderr Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Orderrs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>