force-app/main/default/objects/Service_Orderr__c/fields/Advisor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Notes__c</fullName>
    <label>Advisor Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>