force-app/main/default/objects/Service_Orderr__c/fields/Customer_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Date__c</fullName>
    <label>Customer Approval Date</label>
    <type>Date</type>
</CustomField>