force-app/main/default/objects/Service_Orderr__c/fields/Customer_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Notes__c</fullName>
    <label>Customer Approval Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>