force-app/main/default/objects/Service_Orderr__c/fields/Delivery_Notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Notes__c</fullName>
    <label>Delivery Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>