force-app/main/default/objects/Service_Orderr__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>