force-app/main/default/objects/Service_Orderr__c/fields/Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Date__c</fullName>
    <label>Expected Completion Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>