force-app/main/default/objects/Service_Orderr__c/fields/Service_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Service_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Orderrs</relationshipName>
    <type>Lookup</type>
</CustomField>