force-app/main/default/objects/Service_Orderr__c/fields/Service_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Service_Mileage__c</fullName>
    <label>Service Mileage</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>