force-app/main/default/objects/Service_Orderr__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Service_Itemm__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Service_Itemm__c.Service_Orderr__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>