force-app/main/default/objects/Service_Orderr__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <label>Total Discount</label>
    <summarizedField>Service_Itemm__c.Discount_Amount__c</summarizedField>
    <summaryForeignKey>Service_Itemm__c.Service_Orderr__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>