force-app/main/default/objects/Service_Orderr__c/fields/Total_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Count__c</fullName>
    <label>Total Item Count</label>
    <summaryForeignKey>Service_Itemm__c.Service_Orderr__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>