force-app/main/default/objects/Service_Orderr__c/fields/Total_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Quantity__c</fullName>
    <label>Total Item Quantity</label>
    <summarizedField>Service_Itemm__c.Quantity__c</summarizedField>
    <summaryForeignKey>Service_Itemm__c.Service_Orderr__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>