force-app/main/default/objects/Service_Orderr__c/fields/Total_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Total_Subtotal__c</fullName>
    <label>Total Subtotal</label>
    <summarizedField>Service_Itemm__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Service_Itemm__c.Service_Orderr__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>