force-app/main/default/objects/Service_Orderr__c/fields/Vehiclee__c.field-meta.xml
<CustomField>
    <fullName>Vehiclee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehiclee</label>
    <referenceTo>Vehiclee__c</referenceTo>
    <relationshipLabel>Service Orderrs</relationshipLabel>
    <relationshipName>Service_Orderrs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>