force-app/main/default/objects/Service_Orderr__c/validationRules/Approved_Status_Requires_Customer_Approv.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Status_Requires_Customer_Approv</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Service_Status__c, &quot;Approved&quot;),
    NOT(ISPICKVAL(Customer_Approval__c, &quot;Approved&quot;))
)</errorConditionFormula>
    <errorDisplayField>Service_Status__c</errorDisplayField>
    <errorMessage>Service order cannot be marked Approved until Customer Approval is received</errorMessage>
</ValidationRule>