force-app/main/default/objects/Service_Orderr__c/validationRules/Cancellation_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Service_Status__c, &quot;Cancelled&quot;),
    ISBLANK(Cancellation_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please provide a cancellation reason</errorMessage>
</ValidationRule>