force-app/main/default/objects/Service_Orderr__c/validationRules/Customer_Approval_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Approval_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Customer_Approval__c, &quot;Approved&quot;),
    ISBLANK(Customer_Approval_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Customer_Approval_Date__c</errorDisplayField>
    <errorMessage>Customer Approval date is required when customer approval is approved</errorMessage>
</ValidationRule>