force-app/main/default/objects/Service_Orderr__c/validationRules/Expected_Completion_Date_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Completion_Date_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Completion_Date__c &lt;  Service_Date__c</errorConditionFormula>
    <errorDisplayField>Expected_Completion_Date__c</errorDisplayField>
    <errorMessage>Expected Completion Date cannot be earlier than service date</errorMessage>
</ValidationRule>