force-app/main/default/objects/Service_Orderr__c/validationRules/Problem_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Problem_Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Problem_Description__c )</errorConditionFormula>
    <errorDisplayField>Problem_Description__c</errorDisplayField>
    <errorMessage>Please enter the customer&apos;s problem description</errorMessage>
</ValidationRule>