force-app/main/default/objects/Service_Orderr__c/validationRules/Service_Advisor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Advisor_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Service_Advisor__c )</errorConditionFormula>
    <errorDisplayField>Service_Advisor__c</errorDisplayField>
    <errorMessage>Please select a service advisor</errorMessage>
</ValidationRule>